# medium-api

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: Cargo.toml  root_controller.rs
src/dto/: mod.rs  root_dto.rs
src/routes/: Cargo.toml  index.rs  mod.rs  root.rs
src/services/: root_service.rs
tests/: test_counter.rs  test_root.rs
