[package]
name = "medium-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.2", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
